# covid

./: admon_demografico.xlsx  admon_socioeconomico.xlsx  analysis.ipynb  comercio_demografico.xlsx  comercio_socioeconomico.xlsx  demografico.xlsx  equipamiento.xlsx  motivos.xlsx  motivos_admon_demografico.xlsx  motivos_admon_socioeconomico.xlsx  pyproject.toml  socioeconomico.xlsx  viviendas.xlsx
datos_2019/: Diseдo de Registro anonimizado TIC-H'19.xlsx  fichero MIEMBROS
