[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Javier Beltrán <javier.beltran@newtral.es>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scipy = "^1.4.1"
pandas = "^1.0.2"
matplotlib = "^3.2.0"
jupyter = "^1.0.0"
xlrd = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
